--- a/_includes/rm_post_footer.html
+++ b/_includes/rm_post_footer.html
@@ -4,11 +4,11 @@
       <div class="row align-items-center">
         <!-- Copyright -->
         <div class="col-md-4" style="margin: auto; text-align: center;">
-          <span class="copyright">Copyright &copy; {{ site.title }} {{ 'now' | date: "%Y" }}</span>
+          <span class="copyright">Copyright Rafaël Maychmaz {{ 'now' | date: "%Y" }}</span>
         </div>
         <!-- Social Media -->
         <div class="col-md-4" style="margin: auto; text-align: center;">
-          <a href="https://facebook.com/30000clodoaldiens" style="margin: auto; text-align: center; color: #9fcc9d; text-decoration: none">
+          <a href="https://www.facebook.com/rafaelmaychmaz" style="margin: auto; text-align: center; color: #9fcc9d; text-decoration: none">
             <i class="fab fa-facebook-f" aria-hidden="true"></i>
           </a>
         </div>
