--- a/_includes/rm_post_navbar.html
+++ b/_includes/rm_post_navbar.html
@@ -27,13 +27,13 @@
           <a class="nav-link" href="/">ACCUEIL</a>
         </li>
         <li class="mainNav_li">
-          <a class="nav-link" href="/decouverte.html">DÉCOUVERTE</a>
+          <a class="nav-link" href="/action.html" title="Mon action d'élu local">ACTION</a>
         </li>
         <li class="mainNav_li">
-          <a class="nav-link" href="#">ENGAGEMENT</a>
+          <a class="nav-link" href="/idees.html" title="Mes propositions pour Saint-Cloud">IDÉES</a>
         </li>
         <li class="mainNav_li">
-          <a class="nav-link" href="#">IDÉES</a>
+          <a class="nav-link" href="#">ME SOUTENIR</a>
         </li>
         <li class="mainNav_li">
           <a class="nav-link" href="#">CONTACT</a>
