--- a/_includes/rm_post_navbar.html
+++ b/_includes/rm_post_navbar.html
@@ -24,7 +24,7 @@
     <div class="collapse navbar-collapse" id="toggleMobileMenu">
       <ul class="navbar-nav ms-auto text-center">
         <li class="mainNav_li">
-          <a class="nav-link" href="/">ACCUEIL</a>
+          <a class="nav-link" href="/">VOTRE ÉLU LOCAL</a>
         </li>
         <li class="mainNav_li">
           <a class="nav-link" href="/action.html" title="Mon action d'élu local">ACTION</a>
