--- a/_includes/rm_post_navbar.html
+++ b/_includes/rm_post_navbar.html
@@ -33,10 +33,10 @@
           <a class="nav-link" href="/idees.html" title="Mes propositions pour Saint-Cloud">IDÉES</a>
         </li>
         <li class="mainNav_li">
-          <a class="nav-link" href="#">ME SOUTENIR</a>
+          <a class="nav-link" href="/soutenir.html" title="Soutenir mon action d'élu local">ME SOUTENIR</a>
         </li>
         <li class="mainNav_li">
-          <a class="nav-link" href="#">CONTACT</a>
+          <a class="nav-link" href="/contact.html" title="M'écrire ou me rencontrer">CONTACT</a>
         </li>
         <li class="mainNav_li">
           <a class="nav-link" href="https://www.saintcloud.fr/">MAIRIE</a>
