--- a/_includes/rm_post_contact.html
+++ b/_includes/rm_post_contact.html
@@ -1,7 +1,7 @@
 
 <section id="contact_section">
     <center><b>NOUS CONTACTER</b></center>
-    <p>Utilisez <a href="https://facebook.com/30000clodoaldiens" style="color:#9fcc9d;">notre page Facebook</a> ou le formulaire ci-dessous.</p>
+    <p>Utilisez <a href="https://facebook.com/rafaelmaychmaz" style="color:#9fcc9d;">notre page Facebook</a> ou le formulaire ci-dessous.</p>
     <form style="text-align: center;" id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/mvodvnrg" method="post">
         <fieldset id="fs-frm-inputs">
             <label for="full-name">Prénom et Nom</label><br>
