Add index header

--- a/_layouts/rm_post.html
+++ b/_layouts/rm_post.html
@@ -21,7 +21,7 @@
 <body id="page-top">
   {% include rm_post_navbar.html %}
 
-  <div class="main">
+  <div class="rm_post_main">
     <!-- Main content of the post -->
     {{ content }}
     {% if page.author %}
