Update index header

--- a/_layouts/rm_index.html
+++ b/_layouts/rm_index.html
@@ -41,7 +41,7 @@
             <div class="quote_container">
               <div class="quote_text">
                 <p>⟪ Bienvenue !<br>Vous trouvez sur ce site un <b>panorama de mes activités d'élu local</b>.
-                  Mon action, mes propositions pour Saint-Cloud pour enjeux d'aujourd'hui et des années à venir. ⟫</p>
+                  Mon action, mes propositions pour Saint-Cloud pour les enjeux d'aujourd'hui et des années à venir. ⟫</p>
               </div>
 
               <div class="quote_signature_container">
