--- a/_layouts/rm_index.html
+++ b/_layouts/rm_index.html
@@ -31,17 +31,15 @@
   <header class="masthead">
     <div class="container">
           <div class="intro-text">
-
-            <div class="intro-heading text-uppercase"><p>Saint-Cloud</p>
-</div>
-            <div class="intro-lead-in"><p>Pour un cadre de vie exceptionnel aux portes de Paris</p>
-</div>
-
+            <div class="intro-heading text-uppercase"><p>Saint-Cloud</p></div>
+            <div class="intro-lead-in"><p>Pour une qualité de vie exceptionnelle, aux portes de Paris</p></div>
             <!-- START OF QUOTE-->
             <div class="quote_container">
               <div class="quote_text">
-                <p>⟪ Bienvenue !<br>Vous trouvez sur ce site un <b>panorama de mes activités d'élu local</b>.
-                  Mon action, mes propositions pour Saint-Cloud pour les enjeux d'aujourd'hui et des années à venir. ⟫</p>
+                <p>⟪ Bienvenue !<br>
+                  Vous trouverez ici <a href="/action.html">mon action d'élu local</a> pour améliorer le quotidien de chacune et chacun d'entre vous.
+                  Il y a aussi <a href="/idees.html">des propositions</a> concrètes pour les enjeux d'aujourd'hui et de demain.
+                  Si vous souhaitez <a href="/contact.html">participer</a> à l'aventure, ou simplement <a href="/contact.html">me contacter</a>, ce sera avec grand plaisir. ⟫</p>
               </div>
 
               <div class="quote_signature_container">
@@ -58,7 +56,7 @@
 
     </div>
   </header>
-<!-- IMAGE + TEXT D'INTRO  : FIN -->
+  <!-- IMAGE + TEXT D'INTRO  : FIN -->
 
 
 
