--- a/_layouts/rm_index.html
+++ b/_layouts/rm_index.html
@@ -39,7 +39,7 @@
                 <p>⟪ Bienvenue !<br>
                   Vous trouverez ici <a href="/action.html">mon action d'élu local</a> pour améliorer votre quotidien.
                   Il y a aussi <a href="/idees.html">des propositions</a> concrètes.
-                  Et si vous souhaitez <a href="/contact.html">participer</a> à l'aventure, ou simplement <a href="/contact.html">me contacter</a>, ce sera avec plaisir. ⟫</p>
+                  Et si vous souhaitez <a href="/soutenir.html">participer</a> à l'aventure, ou simplement <a href="/contact.html">me contacter</a>, ce sera avec plaisir. ⟫</p>
               </div>
 
               <div class="quote_signature_container">
