--- a/_layouts/rm_index.html
+++ b/_layouts/rm_index.html
@@ -50,7 +50,7 @@
             </div>
             <!-- END OF QUOTE -->
 
-            <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#blog">Quelles sont les news ?</a>
+            <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#blog">Voir les nouvelles</a>
 
       </div>
 
@@ -63,6 +63,7 @@
   <!-- LA SUITE EST EN MODE NORMAL POUR LE MOMENT -->
   <div class="rm_post_main">
     <!-- Main content of the post -->
+    <a name="blog"></a>
     {{ content }}
     {% if page.author %}
         {% include rm_post_author.html %}
