--- a/assets/css/rafaelmaychmaz.css
+++ b/assets/css/rafaelmaychmaz.css
@@ -295,7 +295,7 @@ h1 {
     background: rgba(255, 255, 255, 0.829)
 }
 
-h2, h3, h4 {
+h2:not(.accordion-header), h3, h4 {
     margin-left: 5px;
     margin-right: 5px;
     /*font-family: 'Roboto', sans-serif;*/
@@ -303,7 +303,7 @@ h2, h3, h4 {
 }
 
 /* Classic title 1 */
-h2 {
+h2:not(.accordion-header) {
     font-weight: normal;
     position: relative;
     text-shadow: 0 -1px rgba(0,0,0,0.6);
